--- a/Stardew.Tasks/Stardew.Tasks.csproj
+++ b/Stardew.Tasks/Stardew.Tasks.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <AssemblyName>Linkoid.Stardew.Tasks</AssemblyName>
+    <VersionPrefix>0.1.0</VersionPrefix>
+    <VersionSuffix>alpha</VersionSuffix>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>11</LangVersion>
